# LSBA

./: CMakeLists.txt  Doxyfile  LSBAConfig.cmake.in  LSBAConfigVersion.cmake.in  README.md
cmake/: FindCubature.cmake  FindEigen.cmake  FindLSMG.cmake  FindMBA.cmake
example/: CMakeLists.txt
example/src/: main.cpp
include/: lsba.hpp  lsba_link.hpp
src/: lsba.cpp  lsba_link.cpp
